force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Case__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>R00N80000002vw3fEAA</relationshipName>
    <type>Lookup</type>
</CustomField>