force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Company__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>R00N80000002eb1GEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>