force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Contact__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>