force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Contract__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>R00N80000002vvynEAA</relationshipName>
    <type>Lookup</type>
</CustomField>