force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Days_to_Complete__c</fullName>
    <formula>(NOW() -  dsfs__Sent_Date_Time__c ) - (NOW() - dsfs__Completed_Date_Time__c)</formula>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>