force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Declined_Reason__c</fullName>
    <label>Declined Reason</label>
    <type>TextArea</type>
</CustomField>