force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__DocuSign_Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Envelope_ID__c</fullName>
    <label>DocuSign Envelope ID</label>
    <length>56</length>
    <type>Text</type>
</CustomField>