force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Envelope_Link__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Envelope_Link__c</fullName>
    <label>Envelope Link</label>
    <type>TextArea</type>
</CustomField>