force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Hours_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Hours_to_Complete__c</fullName>
    <formula>dsfs__Minutes_to_Complete__c /60</formula>
    <label>Hours to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>