force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Hrs_Sent_to_Sign__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Hrs_Sent_to_Sign__c</fullName>
    <formula>IF( dsfs__Envelope_Status__c  = &quot;Voided&quot;,  0,  IF(dsfs__Envelope_Status__c  = &quot;Declined&quot;,  0,   IF(dsfs__Envelope_Status__c  = &quot;Sent&quot;,  dsfs__Sent_Age__c * 24,  dsfs__Hours_to_Complete__c ) ) )</formula>
    <label>Hours Sent to Sign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>