force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Minutes_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Minutes_to_Complete__c</fullName>
    <formula>dsfs__Days_to_Complete__c * 1440</formula>
    <label>Minutes to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>