force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Number_Completed__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Number_Completed__c</fullName>
    <formula>IF( dsfs__Envelope_Status__c = &quot;Completed&quot;, 1, null)</formula>
    <label>Number Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>