force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>R00N80000002fD9vEAE</relationshipName>
    <type>Lookup</type>
</CustomField>