force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Sender__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Sender__c</fullName>
    <label>Sender</label>
    <length>56</length>
    <type>Text</type>
</CustomField>