force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Sender_Email__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>