force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Sent_Age__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Sent_Age__c</fullName>
    <formula>NOW() -  dsfs__Sent_Date_Time__c</formula>
    <label>Sent Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>