force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Sent_Date_Time__c</fullName>
    <label>Sent</label>
    <type>DateTime</type>
</CustomField>