force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Subject__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Subject__c</fullName>
    <label>Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>