force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Time_to_Complete__c</fullName>
    <formula>IF( dsfs__Envelope_Status__c  = &quot;Voided&quot;, &quot;&quot;,  IF(dsfs__Envelope_Status__c  = &quot;Declined&quot;,  &quot;&quot;,   IF(dsfs__Envelope_Status__c  = &quot;Sent&quot;,  &quot;&quot;, TEXT( 
ROUND( 
( dsfs__Completed_Date_Time__c  -  dsfs__Sent_Date_Time__c ) - 
MOD(dsfs__Completed_Date_Time__c  - dsfs__Sent_Date_Time__c,1) 
,0) 
) 
&amp;&quot; day(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(dsfs__Completed_Date_Time__c - dsfs__Sent_Date_Time__c,1)*24 - 
MOD(MOD(dsfs__Completed_Date_Time__c - dsfs__Sent_Date_Time__c,1)*24,1) 
,0) 
) 
&amp;&quot; hour(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(MOD(dsfs__Completed_Date_Time__c - dsfs__Sent_Date_Time__c,1)*24,1) 
*60 
,0) 
)&amp;&quot; minute(s)&quot;) ) )</formula>
    <label>Time to Complete</label>
    <type>Text</type>
</CustomField>