force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Viewed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Viewed_Date_Time__c</fullName>
    <label>Last Viewed</label>
    <type>DateTime</type>
</CustomField>