force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Voided_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Voided_Date_Time__c</fullName>
    <label>Voided</label>
    <type>DateTime</type>
</CustomField>