force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Voided_Reason__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Voided_Reason__c</fullName>
    <label>Voided Reason</label>
    <type>TextArea</type>
</CustomField>