force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Opportunity_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Service Provider</label>
    <referenceTo>Opportunity_Service_Provider__c</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>