force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/dsfs__All1.listView-meta.xml
<ListView>
    <fullName>dsfs__All1</fullName>
    <columns>NAME</columns>
    <columns>dsfs__DocuSign_Envelope_ID__c</columns>
    <columns>dsfs__Sent_Date_Time__c</columns>
    <columns>dsfs__Envelope_Status__c</columns>
    <columns>dsfs__Company__c</columns>
    <columns>dsfs__Opportunity__c</columns>
    <columns>dsfs__Case__c</columns>
    <columns>dsfs__Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>