force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/dsfs__All_Completed_Envelopes.listView-meta.xml
<ListView>
    <fullName>dsfs__All_Completed_Envelopes</fullName>
    <columns>NAME</columns>
    <columns>dsfs__Sender__c</columns>
    <columns>dsfs__Subject__c</columns>
    <columns>dsfs__Sent_Date_Time__c</columns>
    <columns>dsfs__Completed_Date_Time__c</columns>
    <columns>dsfs__Hours_to_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dsfs__Envelope_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Completed Envelopes</label>
</ListView>